...
                    ],
                  ),
                ),
                Expanded(child: Container()),
                // Tạo nút thêm (thêm đại lý)
                GestureDetector(
                  key: Key('ThemDL'),
                  onTap: () {
                    _newDate.text =
                        '${DateTime.now().month}-${DateTime.now().day}-${DateTime.now().year}';
                    showDialog(
                      context: context,
                      builder: (context) {
...
                          content: ThemDaiLy(
                            formkey: formKey,
                            checksua: true,
                            maDL: _newMaDL,
                            tenDL: _newName,
                            loaiDL: _newType,
                            quan: _newLoca,
                            email: _newEmail,
                            sodtDL: _newPhone,
                            tienno: _newTienno,
                            ngaytiepnhan: _newDate,
                            dateSub: dateSub,
                          ),
                          actions: [
                            TextButton(
                              key: Key('ThemSubmit'),
                              onPressed: () async {
                                final isValid =
                                    formKey.currentState!.validate();
                                if (isValid) {
                                  var addData = await supabaseManager.addData(
                                      int.parse(_newMaDL.text),
...
                const SizedBox(
                  width: 5,
                ),

                // Tạo nút xóa (xóa đại lý)
                GestureDetector(
                  key: Key('xoaDL'),
                  onTap: () {
                    if (selectedData.isEmpty) {
                      showDialog(
                          context: context,
                          builder: (context) {
                            return AlertDialog(
...
                        context: context,
                        builder: (context) {
                          return AlertDialog(
                            title: Text('Bạn chắc chắn muốn xóa?'),
                            actions: [
                              TextButton(
                                key: Key('xoaDLBut'),
                                onPressed: () async {
                                  var data;
                                  while (selectedData.isNotEmpty) {
                                    data =
                                        await supabaseManager.deleteDataDaiLy(
                                            selectedData.removeLast());
...
                    ),
                  ),
                ),

                // Tạo nút sửa (sửa đại lý)
                GestureDetector(
                  key: Key('suaDL'),
                  onTap: () {
                    if (selectedRow.length < 1) {
                      showDialog(
                          context: context,
                          builder: (context) {
                            return AlertDialog(
...
                              quan: _newLoca,
                              tienno: _newTienno,
                              dateSub: dateSub,
                            ),
                            actions: [
                              TextButton(
                                key: Key('suaSubmit'),
                                onPressed: () async {
                                  final isValid =
                                      formKey.currentState!.validate();
                                  if (isValid) {
                                    var updateData =
                                        await supabaseManager.updateDaiLyData(
...
      'NGÀY TIẾP NHẬN',
      'TIỀN NỢ'
    ];
    return FutureBuilder(
      future: supabaseManager.readDataDaiLy(
          _searchMa.text, _searchQuan.text, _searchLoai.text),
      // future: supabaseManager.readData('DAILY'),
      builder: (context, snapshot) {
        if (!snapshot.hasData) {
          return const CircularProgressIndicator();
        }
        final doc = snapshot.data as PostgrestResponse?;
        if (doc == null) {
...
          ))
      .toList();

  List<DataRow> getRows(List<dynamic> users) => users.map((dynamic user) {
        final temp = (user as Map<String, dynamic>);
        final cells = [
          temp['madaily'],
          temp['tendaily'],
          temp['loaidaily'],
          temp['sodienthoai'],
          temp['email'],
          temp['quan'],
          temp['ngaytiepnhan'],
          temp['tienno']
        ];
        return DataRow(
...
