...
                    )
                  ],
                ),
                Expanded(child: Container()),
                // tạo nút THÊM
                GestureDetector(
                  key: Key('ThemMH'),
                  onTap: () {
                    _newHanSD.text = "";
                    _newNgaySX.text = "";
                    showDialog(
                      context: context,
                      builder: (context) {
...
                            newSoluong: _newSoLuong,
                            nsxSub: nsxSub,
                            hsdSub: hsdSub,
                          ),
                          actions: [
                            TextButton(
                              key: Key('ThemMHSubmit'),
                              onPressed: () async {
                                final isValid =
                                    formKey.currentState!.validate();
                                if (isValid) {
                                  var addData = await MatHang().addMatHang(
                                      int.parse(_newMaMH.text),
...
                ),
                const SizedBox(
                  width: 5,
                ),
                // Tạo nút xóa
                GestureDetector(
                  key: Key('XoaMH'),
                  onTap: () {
                    if (selectedData.isEmpty) {
                      showDialog(
                          context: context,
                          builder: (context) {
                            return AlertDialog(
...
                        context: context,
                        builder: (context) {
                          return AlertDialog(
                            title: Text('Bạn chắc chắn muốn xóa?'),
                            actions: [
                              TextButton(
                                key: Key('XoaMHYes'),
                                onPressed: () async {
                                  var deletedata;
                                  while (selectedData.isNotEmpty) {
                                    deletedata = await MatHang().deleteMatHang(
                                        selectedData.removeLast());
                                    if (deletedata != null) {
...
                              : Colors.white),
                    ),
                  ),
                ),
                // tạo nút sửa
                GestureDetector(
                  key: Key('SuaMH'),
                  onTap: () {
                    if (selectedRow.length < 1) {
                      showDialog(
                          context: context,
                          builder: (context) {
                            return AlertDialog(
...
                              newSoluong: _newSoLuong,
                              nsxSub: nsxSub,
                              hsdSub: hsdSub,
                            ),
                            actions: [
                              TextButton(
                                key: Key('SuaMHSubmit'),
                                onPressed: () async {
                                  final isValid =
                                      formKey.currentState!.validate();
                                  if (isValid) {
                                    var updateData = await MatHang()
                                        .updateMatHang(
...
          user.donvi,
          user.gianhap,
          user.giaxuat,
          user.soluong,
          user.ngaysanxuat,
          user.hansudung,
          //temp['mamathang'],
          //temp['tenmathang'],
          //temp['donvi'],
          //temp['gianhap'],
          //temp['giaxuat'],
          //temp['soluong'],
          //temp['ngaysanxuat'],
          //temp['hansudung']
        ];

        return DataRow(
...
