...
                  padding: EdgeInsets.symmetric(horizontal: 8),
                  width: 400,
                  decoration: BoxDecoration(
                      borderRadius: BorderRadius.all(Radius.circular(8)),
                      border: Border.all(color: Colors.black)),
                  child: TextField(
                    key: Key('password'),
                    cursorColor: Colors.black,
                    decoration: InputDecoration(
                        hintText: 'Enter password',
                        border: InputBorder.none,
                        suffixIcon: IconButton(
                          icon: Icon(
...
                  ),
                ),
                const SizedBox(
                  height: 15,
                ),
                ElevatedButton(
                  key: Key('loginButton'),
                  onPressed: _login,
                  style:
                      ElevatedButton.styleFrom(primary: Colors.blueGrey[800]),
                  child: Text('Log In'),
                ),
                const SizedBox(
...
